Remove META.json from Git and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,14 @@
-/.build/
-/_build/
-/Build
-/blib
-
-/carton.lock
-/.carton/
-/local/
-
-nytprof.out
-nytprof/
-
-cover_db/
-
-*.bak
-*.old
-*~
-*.swp
-*.o
-*.obj
-
-!LICENSE
-
-MANIFEST
-MYMETA.*
-
-README
-
-/DBIx-ThinSQL-SQLite-*
-
-dbix-thinsql-sqlite-*
-
+blib/
+DBIx-ThinSQL*
 extlib/
+inc/
+Makefile
+Makefile.old
+MANIFEST
+MANIFEST.bak
+META.*
+MYMETA.*
+pm_to_blib
+README
+.releaserc
+*\.swp
